--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>42 helper</description>
     <properties>
         <java.version>1.8</java.version>
+        <log4j2.version>2.15.0</log4j2.version>
     </properties>
     <dependencies>
         <dependency>
